--- a/bounce.html
+++ b/bounce.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html>
   <head>
@@ -7,73 +6,83 @@
         margin: 10px;
         padding: 0px;
       }
-	  h3{color: blue;}
-	  #canvas {
-	display: block;
-	border: 2.5px solid red;
-	margin: 30px auto;
-}
+      h3 { color: blue; }
+      #canvas {
+        display: block;
+        border: 2.5px solid red;
+        margin: 30px auto;
+      }
     </style>
   </head>
   <body>
-  <center><p><h3><u>Bouncing Ball</u></h3></p></center>
+    <center><p><h3><u>Bouncing Ball</u></h3></p></center>
     <canvas id="canvas"></canvas>
-	<script>
-	var canvas = document.getElementById("canvas"),
-		ctx = canvas.getContext("2d");
-		var W = 350,
-		H = 500;
+    <script>
+      var canvas = document.getElementById("canvas"),
+          ctx = canvas.getContext("2d"),
+          W = 350,
+          H = 500;
 
+      canvas.height = H;
+      canvas.width = W;
 
-canvas.height = H; canvas.width = W;
+      var ball = {
+        x: W / 2,
+        y: 50,
+        radius: 15,
+        color: "red",
+        vx: 0,
+        vy: 5,
+      };
 
-var ball = {},//Creating ball object
-		mass=10;
-		gravity = 0.2,
-		bounce = 0.7;//
+      var gravity = 0.2,
+          bounce = 0.7;
 
-ball = {
-	x: W/2,
-	y: 50,
-	
-	radius: 15,
-	color: "red",
-	
-	vx: 0,
-	vy: 1,
-	
-	draw: function() {
-		ctx.beginPath();
-		ctx.arc(this.x, this.y, this.radius, 0, Math.PI*2, true);
-		ctx.fillStyle = this.color;
-		ctx.fill();
-		ctx.closePath();
-	}
-	
-};
+      function clearCanvas() {
+        ctx.clearRect(0, 0, W, H);
+      }
 
-function clearCanvas() {
-	ctx.clearRect(0, 0, W, H);
-}
+      function update() {
+        clearCanvas();
 
-function update() {
-	clearCanvas();
-	ball.draw();
-	
-	ball.y += ball.vy;
-	ball.vy += gravity;
+        // Draw the ball
+        ctx.beginPath();
+        ctx.arc(ball.x, ball.y, ball.radius, 0, Math.PI * 2);
+        ctx.fillStyle = ball.color;
+        ctx.fill();
+        ctx.closePath();
 
-	if(ball.y + ball.radius > H) {
+        // Update ball position
+        ball.y += ball.vy;
+        ball.vy += gravity;
 
-		ball.y = H - ball.radius;
-		ball.vy *= -bounce;
-		return ball.vx *= -bounce;
+        // Bounce off the ground
+        if (ball.y + ball.radius > H) {
+          ball.y = H - ball.radius;
+          ball.vy *= -bounce;
+        }
+      }
 
-	}
-}
-setInterval(update, 1000/60);
-setInterval(update, 0);
+      function handleTap(event) {
+        var rect = canvas.getBoundingClientRect();
+        var touchX = event.clientX - rect.left;
+        var touchY = event.clientY - rect.top;
 
-	</script>
+        // Check if the tap is within the bounds of the ball
+        if (
+          touchX > ball.x - ball.radius &&
+          touchX < ball.x + ball.radius &&
+          touchY > ball.y - ball.radius &&
+          touchY < ball.y + ball.radius
+        ) {
+          ball.vy = -10; // Set velocity upwards to make it bounce
+        }
+      }
+
+      canvas.addEventListener("mousedown", handleTap);
+      canvas.addEventListener("touchstart", handleTap);
+
+      setInterval(update, 1000 / 60); // Call the update function approximately 60 times per second
+    </script>
   </body>
 </html>
